--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/toothless.png" rel="icon">
+  <link href="assets/img/Favicon.png" rel="icon">
   <link href="assets/img/toothless.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
@@ -68,14 +68,14 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Dragon.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Cover_Image_3.png)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Dhavan Shah</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Data Scientist, Machine Learning Engineer, Web Developer, Python Programmer, Freelancer, App Developer</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Data Scientist, Machine Learning Engineer, AI Engineer, Python Programmer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -102,8 +102,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Dhava Shah</span></p>
                         <p><span class="title-s">Profile: </span> <span>Data Scientist</span></p>
-                        <p><span class="title-s">Email: </span> <span>abc.abc@abc.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>0000000000</span></p>
+                        <p><span class="title-s">Email: </span> <span>shah.dhavan09@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>+91 7045526979</span></p>
                       </div>
                     </div>
                   </div>
@@ -117,20 +117,20 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      As a Data Scientist with a Master's Degree from the University of Zurich, 
+                      I specialize in leveraging machine learning and data science techniques to 
+                      solve complex, real-world challenges. My experience has been further validated 
+                      through my achievement as a Kaggle Competition Expert, currently ranking in 
+                      the top 0.5% of over 200,000 data science professionals globally, underscoring 
+                      my expertise in applied machine learning.
+
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
-                    </p>
-                    <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      With a strong foundation in data science, machine learning, and software 
+                      development, I am now seeking opportunities in Data Science or Quantitative 
+                      Research roles where I can apply my expertise to drive innovation, improve 
+                      processes, and solve data-driven challenges.
+                    
                     </p>
                   </div>
                 </div>
