--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/toothless.png" rel="icon">
+  <link href="assets/img/Favicon.png" rel="icon">
   <link href="assets/img/toothless.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
