--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Cover_Image_3.png)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Data_Science.jpeg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="intro-title mb-4">I am Dhavan Shah</h1>
+          <h1 class="intro-title mb-4">Dhavan Shah</h1>
           <p class="intro-subtitle"><span class="text-slider-items">Data Scientist, Machine Learning Engineer, AI Engineer, Python Programmer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
