Adding Blog Section

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#work">Work</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll" href="#blog">Blog</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -141,7 +144,7 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Master's Project, Master's Thesis, and other projects.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -158,9 +161,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Lorem impsum dolor</h2>
+                    <h2 class="w-title">Master's Project</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
+                      <span class="w-ctegory">Deep Learning, Outlier Detection</span> / <span class="w-date">20 March 2025</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -297,8 +300,101 @@
       </div>
     </section><!-- End Portfolio Section -->
 
+    <!-- ======= Blog Section ======= -->
+    <section id="blog" class="blog-mf sect-pt4 route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h3 class="title-a">
+                Blog
+              </h3>
+              <p class="subtitle-a">
+                Data Science, Machine Learning, and AI insights
+              </p>
+              <div class="line-mf"></div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="blog.html#machine-learning-fundamentals">
+                <div class="work-img">
+                  <img src="assets/img/Data_Science.jpeg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Machine Learning Fundamentals</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Data Science</span> / <span class="w-date">15 Jan 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="blog.html#machine-learning-fundamentals"> <span class="ion-ios-plus-outline"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="blog.html#deep-learning-applications">
+                <div class="work-img">
+                  <img src="assets/img/Data_Science.jpeg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Deep Learning Applications</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Deep Learning</span> / <span class="w-date">10 Jan 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="blog.html#deep-learning-applications"> <span class="ion-ios-plus-outline"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="work-box">
+              <a href="blog.html#kaggle-competition-tips">
+                <div class="work-img">
+                  <img src="assets/img/Data_Science.jpeg" alt="" class="img-fluid">
+                </div>
+              </a>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">Kaggle Competition Tips</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Competitions</span> / <span class="w-date">5 Jan 2025</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <a href="blog.html#kaggle-competition-tips"> <span class="ion-ios-plus-outline"></span></a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Blog Section -->
+
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/Background.jpeg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -306,26 +402,12 @@
             <div id="testimonial-mf" class="owl-carousel owl-theme">
               <div class="testimonial-box">
                 <div class="author-test">
-                  <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
-                  <span class="author">Xavi Alonso</span>
+                  <img src="assets/img/Dhavan_01.jpeg" alt="" class="rounded-circle b-shadow-a">
+                  <span class="author">Dhavan Shah</span>
                 </div>
                 <div class="content-test">
                   <p class="description lead">
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.
-                  </p>
-                  <span class="comit"><i class="fa fa-quote-right"></i></span>
-                </div>
-              </div>
-              <div class="testimonial-box">
-                <div class="author-test">
-                  <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
-                  <span class="author">Marta Socrate</span>
-                </div>
-                <div class="content-test">
-                  <p class="description lead">
-                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit.
+                    Data Scientist with a Master's Degree from the University of Zurich, Kaggle Competitions Expert, Machine Learning and AI Research Enthusiast.
                   </p>
                   <span class="comit"><i class="fa fa-quote-right"></i></span>
                 </div>
