Adding Video, seperate pages for projects

--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-visual-outliers.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -135,7 +135,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-loreda-cuno.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -160,7 +160,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-mavrito-lana.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -185,7 +185,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-bindo-laro.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -210,7 +210,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-studio-lena.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -235,7 +235,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-studio-bigbang.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
