--- a/index.html
+++ b/index.html
@@ -335,9 +335,13 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/Cover_Image_4.png)">
-    <div class="overlay-itro"></div>
-    <div class="intro-content display-table">
+  <div id="home" class="intro route bg-image">
+    <video id="intro-bg-video" autoplay loop muted playsinline poster="assets/img/Background.jpeg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; z-index: 0;">
+      <source src="assets/img/DhavanShowcase.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  <div class="overlay-itro" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1;"></div>
+  <div class="intro-content display-table" style="position: relative; z-index: 2;">
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
@@ -441,7 +445,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-visual-outliers.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -465,7 +469,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-loreda-cuno.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
@@ -489,7 +493,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <a href="portfolio-details.html"> <span class="ion-ios-plus-outline"></span></a>
+                      <a href="project-mavrito-lana.html"> <span class="ion-ios-plus-outline"></span></a>
                     </div>
                   </div>
                 </div>
